refactored constants